# oai_w-agf

./: CMakeLists.txt  cmake.patch
ci-scripts/: Jenkinsfile-GitLab-Container  Jenkinsfile-tmp-ran  args_parse.py  ci_infra.yaml  cls_analysis.py  cls_containerize.py  cls_native.py  cls_oai_html.py  cls_oaicitest.py  cls_physim.py  main.py
ci-scripts/conf_files/: gnb-vnf.sa.band78.273prb.aerial.conf  gnb.sa.band78.106prb.rfsim.flexric.conf
ci-scripts/xml_files/: container_5g_flexric_rfsim.xml  container_5g_flexric_rfsim_down.xml  t2_offload_dec_nr_ulsim.xml  t2_offload_enc_nr_dlsim.xml
cmake_targets/: build_oai
cmake_targets/autotests/: test_case_list.xml
cmake_targets/tools/: build_helper
common/: CMakeLists.txt
common/config/: CMakeLists.txt
common/utils/: CMakeLists.txt  oai_asn1.h
common/utils/time_manager/: CMakeLists.txt  README.md  README.me  time_client.c  time_manager.c  time_manager.h  time_server.c  time_source.c
common/utils/time_manager/test/: Makefile  test.c
common/utils/time_manager/tests/: CMakeLists.txt  Makefile  test_auto.c  test_manual.c
doc/: Doxyfile  FEATURE_SET.md  L2NFAPI.md  LDPC_T2_OFFLOAD_SETUP.md  LDPC_XDMA_OFFLOAD_SETUP.md  NR_SA_Multi_TDD_Pattern.md  NR_SA_Tutorial_OAI_nrUE.md  SW_archi.md  gNB_frequency_setup.md  time_management.md
doc/MAC/: mac-usage.md
docker/: Dockerfile.build.ubuntu22
executables/: lte-softmodem.h  lte-uesoftmodem.c  nr-cuup.c  nr-gnb.c  nr-ru.c  nr-softmodem-common.h  nr-softmodem.c  nr-softmodem.h  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  softmodem-common.h
openair1/PHY/: defs_RU.h  (+5 more)
(+265 files in other folders)
